--- a/index.html
+++ b/index.html
@@ -26,11 +26,11 @@
 
     <nav class="navbar">
         <ul>
-            <li><a href="#home">home</a></li>
-            <li><a href="#about">about</a></li>
-            <li><a href="#education">education</a></li>
+            <li><a href="#home">Home</a></li>
+            <li><a href="#about">About</a></li>
+            <li><a href="#education">Education</a></li>
             <li><a href="#portfolio">Certificates</a></li>
-            <li><a href="#contact">contact</a></li>
+            <li><a href="#contact">Contact</a></li>
         </ul>
     </nav>
 
@@ -84,18 +84,18 @@
 
 <section class="about" id="about">
 
-<h1 class="heading"> <span>about</span> me </h1>
+<h1 class="heading"> <span>About</span> Me </h1>
 
 <div class="row">
 
     <div class="info">
-        <h3> <span> name : </span> Atique Ahmad </h3>
-        <h3> <span> age : </span> 20 </h3>
-        <h3> <span> qualification : </span> BSCE (Bachelor  of Computer Engineering) </h3>
-        <h3> <span> post : </span> Web developer </h3>
-        <h3> <span> language : </span> English - Urdu </h3>
+        <h3> <span> Name : </span> Atique Ahmad </h3>
+        <h3> <span> Age : </span> 20 </h3>
+        <h3> <span> Qualification : </span> BSCE (Bachelor  of Computer Engineering) </h3>
+        <h3> <span> Post : </span> Web developer </h3>
+        <h3> <span> Language : </span> English - Urdu </h3>
         <a href="CV/CV.html"><button class="btn"> My CV  </button></a>
-        <a href="CV/CV.pdf"><button class="btn"> download CV <i class="fas fa-download"></i> </button></a>
+        <a href="CV/CV.pdf"><button class="btn"> Download CV <i class="fas fa-download"></i> </button></a>
     </div>
 
     <div class="counter">
@@ -127,7 +127,7 @@
 
 <section class="education" id="education">
 
-<h1 class="heading"> my <span>education</span> </h1>
+<h1 class="heading"> My <span>Education</span> </h1>
 
 <div class="box-container">
 
@@ -190,7 +190,7 @@
 
 <section class="portfolio" id="portfolio">
 
-<h1 class="heading"> my <span>Certificates</span> </h1>
+<h1 class="heading"> My <span>Certificates</span> </h1>
 
 <div class="box-container">
 
@@ -240,7 +240,7 @@
 
 <section class="contact" id="contact">
 
-<h1 class="heading"> <span>contact</span> me </h1>
+<h1 class="heading"> <span>Contact</span> Me </h1>
 
 <div class="row">
 
