--- a/index.html
+++ b/index.html
@@ -95,7 +95,6 @@
         <h3> <span> qualification : </span> BSCE (Bachelor  of Computer Engineering) </h3>
         <h3> <span> post : </span> Web developer </h3>
         <h3> <span> language : </span> English - Urdu </h3>
-        <a href="CV/CV.html"><button class="btn"> My CV  </button></a>
         <a href="CV/CV.pdf"><button class="btn"> download CV <i class="fas fa-download"></i> </button></a>
     </div>
 
@@ -264,7 +263,7 @@
         <input name="Email" type="email" placeholder="email" class="box">
         <input name="Project" type="text" placeholder="project" class="box">
         <textarea name="Message" id="" cols="30" rows="10" class="box message" placeholder="message"></textarea>
-        <button type="submit" class="btn"> send <i class="fas fa-paper-plane"></i> </button>
+        <button name="submit" type="submit" class="btn"> send <i class="fas fa-paper-plane"></i> </button>
 
     </form>
 
