--- a/index.html
+++ b/index.html
@@ -252,7 +252,7 @@ I am currently pursuing a Bachelor of Computer Engineering from Information Tech
 
     </div>
 
-    <form action="contact.php" method="post">
+    <form action="https://formsubmit.co/el/confirm/484044d957ca00b5c51b3ac4fb4cc8ff" method="post">
 
         <input name="Name" type="text" placeholder="name" class="box">
         <input name="Email" type="email" placeholder="email" class="box">
