--- a/index.html
+++ b/index.html
@@ -214,6 +214,10 @@ I am currently pursuing a Bachelor of Computer Engineering from Information Tech
     </div>
 
     <div class="box">
+        <a href="images/EDUCBA%20certificate.jpg"> <img src="images/DEVELOPER_PROGRAM-1.jpg" alt=""></a>
+    </div>
+    
+    <div class="box">
         <a href="images/Graphic%20Designer%20Digiskill.jpg">  <img src="images/Graphic%20Designer%20Digiskill.jpg" alt="IEEE LAHORE"></a>
     </div>
 
