--- a/index.html
+++ b/index.html
@@ -214,7 +214,7 @@ I am currently pursuing a Bachelor of Computer Engineering from Information Tech
     </div>
 
     <div class="box">
-        <a href="images/EDUCBA%20certificate.jpg"> <img src="images/DEVELOPER_PROGRAM-1.jpg" alt=""></a>
+        <a href="images/DEVELOPER_PROGRAM-1.jpg"> <img src="images/DEVELOPER_PROGRAM-1.jpg" alt=""></a>
     </div>
     
     <div class="box">
