--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@ I am currently pursuing a Bachelor of Computer Engineering from Information Tech
         <h3> <span> Qualification : </span> BSCE (Bachelor  of Computer Engineering) </h3>
         <h3> <span> Post : </span>Computer Engineer </h3>
         <h3> <span> Language : </span> English - Urdu </h3>
-        <a href="CV/Atique-Ahmad-Resume.pdf"><button class="btn"> Download Resume <i class="fas fa-download"></i> </button></a>
+        <a href="CV/Atique_Ahmad_Resume.pdf"><button class="btn"> Download Resume <i class="fas fa-download"></i> </button></a>
     </div>
 
     <div class="counter">
