--- a/index.html
+++ b/index.html
@@ -188,6 +188,10 @@ I am currently pursuing a Bachelor of Computer Engineering from Information Tech
 <h1 class="heading"> My <span>Certificates</span> </h1>
 
 <div class="box-container">
+    
+    <div class="box">
+        <a href="images/UC_python.jpg">  <img src="images/UC_python.jpg" alt="Python Course From Basic to Advanced - Udemy"></a>
+    </div>
 
     <div class="box">
         <a href="images/ATIQUE%20AHMAD%20IEEE-1.jpg">  <img src="images/ATIQUE%20AHMAD%20IEEE-1.jpg" alt="IEEE LAHORE"></a>
